--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
     "expo": "^26.0.0",
     "react": "16.3.0-alpha.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.2",
+    "eslint-config-airbnb": "^16.1.0"
   }
 }
